--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <input type="reset" class="btn btn-primary" value="Nouveau jeu" onclick="initialisation()">
         </div>
         <div class="col">
+          <input type="button" class="btn btn-primary" value="2 joueurs" onclick="window.location.href='twoPlayers.html'">
+        </div>
+        <div class="col">
           <input type="button" class="btn btn-danger" value="Quitter" id="quiter" onclick="quitter()">
         </div>
         <div class="col">
