--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <style>
     body {
-      background-color: #f0f0f0; /* Choose your preferred background color */
+      background-color: #f0f0f0; 
     }
   </style>
 </head>
