--- a/twoPlayers.html
+++ b/twoPlayers.html
@@ -66,7 +66,7 @@
         <h3>Player 1</h3>
         <div class="input-group">
           <label for="player1Input">Enter your guess:</label>
-          <input type="number" id="player1Input" class="form-control" disabled>
+          <input type="number" id="player1Input" class="form-control" >
         </div>
         <p class="incorrect-guess" id="player1IncorrectGuess"></p>
         <button class="btn btn-success" onclick="submitGuess('player1')">Submit Guess</button>
